# whisker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-question.yml
.github/workflows/: build.yaml  format.yaml  generate-changelog.yml  publish.yaml
changelog/: 23.added.2.md  23.added.3.md  23.added.4.md  23.added.5.md  23.added.6.md  23.added.md  23.changed.2.md  23.changed.3.md  23.changed.md
pipecat/: pyproject.toml
pipecat/examples/: basic-pipeline.py  switch-languages.py
pipecat/src/pipecat_whisker/: __init__.py  file.py  observer.py  server.py  sink.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  hooks.usePipecatSocket.ts  hooks.useWhisker.ts  main.tsx  state.store.ts  styles.css  types.ts
ui/src/components/: BusEventItem.tsx  BusEvents.tsx  BusMessageItem.tsx  BusMessages.tsx  ConnectionStatus.tsx  DetailsPanel.tsx  FrameFilters.tsx  FrameInspector.tsx  FrameItem.tsx  FramePath.tsx  FramePathItem.tsx  Graph.tsx  JobNode.tsx  JobsPanel.tsx  Pipeline.tsx  PipelineGraphDialog.tsx  PipelinePanel.tsx  ProcessorNode.tsx  SearchableFilterDropdown.tsx  ThemeToggle.tsx  TopBar.tsx  WorkerNode.tsx  WorkerTree.tsx
ui/src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  sheet.tsx
